updated to docs for README, and others
Change examples of readSonde to read. Remove format argument in examples, increased discussion of dr_read

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 [![CRAN_Status_Badge](https://www.r-pkg.org/badges/version/driftR)](https://CRAN.R-project.org/package=driftR)
 [![DOI](https://zenodo.org/badge/91733812.svg)](https://zenodo.org/badge/latestdoi/91733812)
 
-There are many sources of water quality monitoring data including instruments (ex: YSI instruments) and open source data sets (ex: USGS and NDBC), all of which are susceptible to errors/inaccuracies due to drift. `driftR` provides a grammar for cleaning and correcting these data in a "tidy", reproducible manner. 
+There are many sources of water quality monitoring data including instruments (ex: YSI instruments) and open source data sets (ex: USGS and NDBC), all of which are susceptible to errors/inaccuracies due to drift. `driftR` provides a grammar for cleaning and correcting these data in a "tidy", reproducible manner.
 
 ## What's New
 We're hard at work on version 1.1 of `driftR`, which will include:
@@ -47,14 +47,14 @@ devtools::install_github("shaughnessyar/driftR")
 ```
 
 ## Background
-The `driftR` package implements a series of equations used in [Dr. Elizabeth Hasenmueller's](https://www.slu.edu/arts-and-sciences/earth-atmospheric-sciences/faculty/hasenmueller-elizabeth.php) hydrology and geochemistry research. These equations correct continuous water quality monitoring data for incremental drift that occurs over time after calibration. There are two forms of corrections included in the package - a one-point calibration and a two-point calibration. One-point and two-point calibration values are suited for different types of measurements.  The package is currently written for the easiest use with YSI multiparameter Sonde V2 series products. 
+The `driftR` package implements a series of equations used in [Dr. Elizabeth Hasenmueller's](https://www.slu.edu/arts-and-sciences/earth-atmospheric-sciences/faculty/hasenmueller-elizabeth.php) hydrology and geochemistry research. These equations correct continuous water quality monitoring data for incremental drift that occurs over time after calibration. There are two forms of corrections included in the package - a one-point calibration and a two-point calibration. One-point and two-point calibration values are suited for different types of measurements.  The package is currently written for the easiest use with YSI multiparameter Sonde V2 series products.
 
 The figure below illustrates the difference in chloride values between the uncorrected data and the same data with the drift corrections implemented by `driftR` applied. Note that the uncorrected data drifts to higher values over time. `driftR` uses calibration data to correct this drift.
 
 ![](man/figures/chloride_Drop.png)
 
 ## Usage
-As shown, continuous water quality instruments drift over time, so it becomes necessary to correct the data to maintain accuracy. `driftR` provides four verbs for applying these corrections in a consistent, reproducible manner: *read*, *factor*, *correct*, and *drop*. These verbs are designed to be implemented in that order, though there may be multiple applications of *correct* for a given data set. All of the core functions for `driftR` have the `dr_` prefix, making it easy to use them interactively in RStudio. 
+As shown, continuous water quality instruments drift over time, so it becomes necessary to correct the data to maintain accuracy. `driftR` provides four verbs for applying these corrections in a consistent, reproducible manner: *read*, *factor*, *correct*, and *drop*. These verbs are designed to be implemented in that order, though there may be multiple applications of *correct* for a given data set. All of the core functions for `driftR` have the `dr_` prefix, making it easy to use them interactively in RStudio.
 
 ### Basic Use
 
@@ -64,23 +64,23 @@ The following example shows a simple workflow for applying these verbs to some h
 # load the driftR package
 library(driftR)
 
-# import data exported from a Sonde 
-waterTibble <- dr_readSonde(file = "data.csv", define = TRUE)
+# import data exported from a Sonde
+waterTibble <- dr_read(file = "data.csv", instrument = "Sonde", define = TRUE)
 
 # calculate correction factor and keep dateTime var
 # results stored in new vector corrFac and dateTime
-waterTibble <- dr_factor(waterTibble, corrFactor = corrFac, dateVar = Date, 
+waterTibble <- dr_factor(waterTibble, corrFactor = corrFac, dateVar = Date,
                          timeVar = Time, keepDateTime = FALSE)
 
 # apply one-point calibration to SpCond;
 # results stored in new vector SpConde_Corr
-waterTibble <- dr_correctOne(waterTibble, sourceVar = SpCond, cleanVar = SpCond_Corr, 
+waterTibble <- dr_correctOne(waterTibble, sourceVar = SpCond, cleanVar = SpCond_Corr,
                              calVal = 1.07, calStd = 1, factorVar = corrFac)
 
 # apply two-point calibration to pH;
 # results stored in new vector pH_Corr
-waterTibble <- dr_correctTwo(waterTibble, sourceVar = pH, cleanVar = pH_Corr, 
-                             calValLow = 7.01, calStdLow = 7, calValHigh = 11.8, 
+waterTibble <- dr_correctTwo(waterTibble, sourceVar = pH, cleanVar = pH_Corr,
+                             calValLow = 7.01, calStdLow = 7, calValHigh = 11.8,
                              calStdHigh =  10, factorVar = corrFac)
 
 # drop observations to account for instrument equilibration
@@ -95,22 +95,22 @@ All of the core functions return tibbles (or data frames) and make use of the ti
 # load the driftR package
 library(driftR)
 
-# import data exported from a Sonde 
-waterTibble <- dr_readSonde(file = "sondeData.csv", define = TRUE)
+# import data exported from a Sonde
+waterTibble <- dr_read(file = "sondeData.csv", instrument = "Sonde", define = TRUE)
 
 # caclulate correction factors, apply corrections, and drop observations
 waterTibble <- waterTibble %>%
-  dr_factor(corrFactor = corrFac, dateVar = Date, timeVar = Time, 
+  dr_factor(corrFactor = corrFac, dateVar = Date, timeVar = Time,
             keepDateTime = TRUE) %>%
-  dr_correctOne(sourceVar = SpCond, cleanVar = SpCond_Corr, calVal = 1.07, 
+  dr_correctOne(sourceVar = SpCond, cleanVar = SpCond_Corr, calVal = 1.07,
                 calStd = 1, factorVar = corrFac) %>%
-  dr_correctTwo(sourceVar = pH, cleanVar = pH_Corr, calValLow = 7.01, calStdLow = 7, 
+  dr_correctTwo(sourceVar = pH, cleanVar = pH_Corr, calValLow = 7.01, calStdLow = 7,
                 calValHigh = 11.8, calStdHigh =  10, factorVar = corrFac) %>%
   dr_drop(head=10, tail=5)
 ```
 
 ## Additional Documentation
-See the [package website](https://shaughnessyar.github.io/driftR/) for more information on these functions and a [detailed vignette](https://shaughnessyar.github.io/driftR/articles/driftR.html) describing how to get started with `driftR`. 
+See the [package website](https://shaughnessyar.github.io/driftR/) for more information on these functions and a [detailed vignette](https://shaughnessyar.github.io/driftR/articles/driftR.html) describing how to get started with `driftR`.
 
 An [additional vignette](https://shaughnessyar.github.io/driftR/articles/TidyEval.html) describes `driftR`'s use of tidy evaluation and how to implement pipes into data cleaning in greater detail. Building on that article, we also [provide some introductory examples](https://shaughnessyar.github.io/driftR/articles/ExploringData.html) for how to use [`tidyr`](http://tidyr.tidyverse.org), [`ggplot2`](http://ggplot2.tidyverse.org), and several other `R` packages to conduct some initial exploratory data analysis of `driftR` output. Finally, we provide a [fourth vignette](https://shaughnessyar.github.io/driftR/articles/OtherData.html) designed for users of non-YSI Sonde multiparameter V2 series instruments who wish to use `driftR` with their data.
 
